# Variable-width-contouring

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fill_config.h.in
input/: goodsig.txt  jin.txt  test-0.txt  test-1.txt  test-10.txt  test-2.txt  test-3.txt  test-4-upright.txt  test-4.txt  test-5.txt  test-6.txt  test-7.txt  test-8.txt
input/dataset/: 1to3-splitter--rotated_outline_mesh0_z10700.txt  1to3-splitter--rotated_outline_mesh0_z14700.txt  1to3-splitter--rotated_outline_mesh0_z2100.txt  1to3-splitter--rotated_outline_mesh0_z5300.txt  1to3-splitter--rotated_outline_mesh0_z9700.txt  ACAM-Base--scaled_outline_mesh0_z1100.txt  ACAM-Base--scaled_outline_mesh0_z4500.txt  ACAM-Base--scaled_outline_mesh0_z4900.txt  ACAM-Base--scaled_outline_mesh0_z900.txt  ACAM-Cover--scaled_outline_mesh0_z10300.txt  ACAM-Cover--scaled_outline_mesh0_z11300.txt  ACAM-Cover--scaled_outline_mesh0_z12300.txt  ACAM-Cover--scaled_outline_mesh0_z5900.txt  ACAM-Cover--scaled_outline_mesh0_z8900.txt  ACAM-Sensor-Cover--scaled_outline_mesh0_z14300.txt  ACAM-Sensor-Cover--scaled_outline_mesh0_z15300.txt  ACAM-Sensor-Cover--scaled_outline_mesh0_z15700.txt  ACAM-Sensor-Cover--scaled_outline_mesh0_z19700.txt  ACAM-Sensor-Cover--scaled_outline_mesh0_z500.txt  ACAM-Sensor-Cover--scaled_outline_mesh0_z6700.txt  Decking-Fixture--rotated_outline_mesh0_z10100.txt  Decking-Fixture--rotated_outline_mesh0_z12100.txt  Decking-Fixture--rotated_outline_mesh0_z14700.txt  Decking-Fixture--rotated_outline_mesh0_z1500.txt  Decking-Fixture--rotated_outline_mesh0_z22900.txt  Decking-Fixture--rotated_outline_mesh0_z23500.txt  Decking-Fixture--rotated_outline_mesh0_z23900.txt  Decking-Fixture--rotated_outline_mesh0_z5100.txt  Decking-Fixture--rotated_outline_mesh0_z6900.txt  Decking-Fixture-Slider--rotated_outline_mesh0_z11100.txt  Decking-Fixture-Slider--rotated_outline_mesh0_z12300.txt  Decking-Fixture-Slider--rotated_outline_mesh0_z18500.txt  Decking-Fixture-Slider--rotated_outline_mesh0_z20700.txt  Decking-Fixture-Slider--rotated_outline_mesh0_z21300.txt  Decking-Fixture-Slider--rotated_outline_mesh0_z2300.txt  Lawn-Mower-Throttle-Replacement-Sam-Johnston_outline_mesh0_z5100.txt  OpenRC-motor-clamp-base-1_outline_mesh0_z10300.txt  OpenRC-motor-clamp-base-1_outline_mesh0_z12300.txt  OpenRC-motor-clamp-base-1_outline_mesh0_z300.txt  OpenRC-motor-clamp-base-2_outline_mesh0_z15300.txt  (+256 more)
src/: CairoSurface.cpp  CairoSurface.h  MATGraph.cpp  MATGraph.h  MATGraphBuilder.h  MATGraphBuilder_with_BOOST.cpp  MATGraphBuilder_with_CGAL.cpp  Sampling.cpp  Sampling.h  VWCInfillerPlugin.cpp  VWCInfillerPlugin.h  VariableWidthContouring.cpp  VariableWidthContouring.h  VariableWidthContouringForIceSL.cpp  VariableWidthContouringForIceSL.h  VariableWidthContouringLabeling.cpp  VariableWidthContouringSampling.cpp  chronograph.h  main.cpp  utils.cpp  utils.h  vec.cpp  vec.h
src/boost/polygon/: isotropy.hpp  voronoi.hpp
src/boost/polygon/detail/: voronoi_ctypes.hpp
